--- a/notebooks/getting data.ipynb
+++ b/notebooks/getting data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "id": "576cc261",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 94,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -51,12 +51,12 @@
    "id": "fc0301be",
    "metadata": {},
    "source": [
-    "## Historic Listings"
+    "## Housing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 95,
    "id": "749d4db4",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 96,
    "id": "b2917d88",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 97,
    "id": "c2d62870",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "id": "0a2f177f",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 99,
    "id": "aa9fd4fe",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 100,
    "id": "c468f5e5",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 101,
    "id": "ece53642",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 102,
    "id": "f92c0c49",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 103,
    "id": "e6bbfad2",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 104,
    "id": "facee391",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 105,
    "id": "2d82350a",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 106,
    "id": "1e5a76fa",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "id": "3ab20441",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "id": "4d8ecf09",
    "metadata": {},
    "outputs": [],
@@ -349,15 +349,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53f35a6b",
+   "metadata": {},
+   "source": [
+    "## Population"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a717813",
    "metadata": {},
    "source": [
-    "## Immigration"
+    "### Immigration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 109,
    "id": "85fb4888",
    "metadata": {},
    "outputs": [],
@@ -382,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 110,
    "id": "4766c21f",
    "metadata": {},
    "outputs": [],
@@ -395,12 +403,12 @@
    "id": "7792cb29",
    "metadata": {},
    "source": [
-    "## Age Demos"
+    "### Age Demos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 111,
    "id": "a8ae958e",
    "metadata": {},
    "outputs": [],
@@ -425,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 112,
    "id": "df2ff6c3",
    "metadata": {},
    "outputs": [],
@@ -438,12 +446,12 @@
    "id": "1d07dfa4",
    "metadata": {},
    "source": [
-    "## Population Projections"
+    "### Population Projections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 113,
    "id": "2c45d4be",
    "metadata": {},
    "outputs": [],
@@ -459,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 114,
    "id": "6b5786d2",
    "metadata": {},
    "outputs": [],
@@ -477,12 +485,12 @@
    "id": "c98de17f",
    "metadata": {},
    "source": [
-    "## Socio Economic"
+    "## Economic by Region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 115,
    "id": "07a98abf",
    "metadata": {},
    "outputs": [],
@@ -510,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 116,
    "id": "830fab4c",
    "metadata": {},
    "outputs": [],
@@ -528,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 117,
    "id": "ad31336d",
    "metadata": {},
    "outputs": [],
@@ -562,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 118,
    "id": "fa355d6e",
    "metadata": {},
    "outputs": [],
