--- a/notebooks/getting data.ipynb
+++ b/notebooks/getting data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "id": "576cc261",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "id": "749d4db4",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "b2917d88",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "id": "c2d62870",
    "metadata": {},
    "outputs": [],
@@ -106,9 +106,11 @@
     "        csv_data = io.StringIO(data.decode('ascii', errors=\"replace\"))\n",
     "        df = pd.read_csv(csv_data, index_col=0, header=0, encoding='cp1252')\n",
     "\n",
+    "    print(\"here\")\n",
     "    # skip the final records if necessary\n",
-    "    if (read_excel_dict.get(\"tail skip\")):\n",
-    "        df = df.iloc[:-read_excel_dict[\"tail skip\"]]\n",
+    "    if (read_excel_dict.get(\"skip tail\")):\n",
+    "        df = df.iloc[:-read_excel_dict[\"skip tail\"]]\n",
+    "    print(\"finsih\")\n",
     "\n",
     "    # if there are missing columns\n",
     "    if (sheet_dict.get(\"missing header\")):\n",
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "id": "0a2f177f",
    "metadata": {},
    "outputs": [],
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 12,
    "id": "a8ae958e",
    "metadata": {},
    "outputs": [],
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "id": "df2ff6c3",
    "metadata": {},
    "outputs": [],
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "id": "07a98abf",
    "metadata": {},
    "outputs": [],
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "id": "830fab4c",
    "metadata": {},
    "outputs": [],
