--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -21,11 +21,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/09/19 15:57:49 WARN Utils: Your hostname, DESKTOP-JJQB7CC resolves to a loopback address: 127.0.1.1; using 172.30.3.30 instead (on interface eth0)\n",
-      "24/09/19 15:57:49 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/09/20 18:55:22 WARN Utils: Your hostname, DESKTOP-JJQB7CC resolves to a loopback address: 127.0.1.1; using 172.30.3.30 instead (on interface eth0)\n",
+      "24/09/20 18:55:22 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/19 15:57:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/09/20 18:55:24 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -1576,13 +1576,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Spelling correction\n",
+    "historical_median['suburb'] = historical_median['suburb'].replace('Wanagaratta', 'Wangaratta')\n",
+    "historical_median['suburb'] = historical_median['suburb'].replace('Newcombe', 'Newcomb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save it to a csv file\n",
     "historical_median.to_csv('../data/landing/historical_median_rent_by_suburb.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1784,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1873,7 @@
        "4                        CBD-St Kilda Rd  2003    -3.125000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1884,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
