added notebook to join sa2 to suburbs

--- a/notebooks/getting data.ipynb
+++ b/notebooks/getting data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "id": "576cc261",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "import os\n",
     "\n",
     "# change directories to default one\n",
-    "os.chdir(\"/home/malachy/ADS (2024)/project-2-group-real-estate-industry-project-11/scripts\")\n",
+    "# os.chdir(\"/home/malachy/ADS (2024)/project-2-group-real-estate-industry-project-11/scripts\")\n",
     "\n",
     "# get the relative output path\n",
     "RELATIVE_PATH = \"../data/landing/\"\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "id": "749d4db4",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "b2917d88",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "id": "c2d62870",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "id": "0a2f177f",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "id": "aa9fd4fe",
    "metadata": {},
    "outputs": [],
@@ -174,10 +174,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "c468f5e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n"
+     ]
+    }
+   ],
    "source": [
     "write_all_csvs(URL_TO_SHEETS_HOUSES, read_excel_dict_houses)"
    ]
@@ -200,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "ece53642",
    "metadata": {},
    "outputs": [],
@@ -232,10 +251,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "id": "f92c0c49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n"
+     ]
+    }
+   ],
    "source": [
     "write_all_csvs(URL_TO_SHEETS_INTEREST, read_excel_dict_interest)"
    ]
@@ -250,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "id": "e6bbfad2",
    "metadata": {},
    "outputs": [],
@@ -273,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "id": "facee391",
    "metadata": {},
    "outputs": [],
@@ -296,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 17,
    "id": "2d82350a",
    "metadata": {},
    "outputs": [],
@@ -309,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 18,
    "id": "1e5a76fa",
    "metadata": {},
    "outputs": [],
@@ -327,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 19,
    "id": "3ab20441",
    "metadata": {},
    "outputs": [],
@@ -339,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "id": "4d8ecf09",
    "metadata": {},
    "outputs": [],
@@ -365,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 21,
    "id": "85fb4888",
    "metadata": {},
    "outputs": [],
@@ -390,10 +422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 22,
    "id": "4766c21f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n"
+     ]
+    }
+   ],
    "source": [
     "write_all_csvs(URL_TO_SHEETS_IMMIGRATION, read_excel_dict_immigration)"
    ]
@@ -408,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 23,
    "id": "a8ae958e",
    "metadata": {},
    "outputs": [],
@@ -433,10 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 24,
    "id": "df2ff6c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n"
+     ]
+    }
+   ],
    "source": [
     "write_all_csvs(URL_TO_SHEETS_AGE, read_excel_dict_age)"
    ]
@@ -451,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 25,
    "id": "2c45d4be",
    "metadata": {},
    "outputs": [],
@@ -467,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 26,
    "id": "6b5786d2",
    "metadata": {},
    "outputs": [],
@@ -490,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 27,
    "id": "07a98abf",
    "metadata": {},
    "outputs": [],
@@ -518,10 +568,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 28,
    "id": "830fab4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n"
+     ]
+    }
+   ],
    "source": [
     "write_all_csvs(URL_TO_SHEETS_SOCIOECONOMIC, read_excel_dict_socioeconomic)"
    ]
@@ -536,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 29,
    "id": "ad31336d",
    "metadata": {},
    "outputs": [],
@@ -570,10 +631,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 30,
    "id": "fa355d6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n",
+      "/tmp/ipykernel_10832/1424707012.py:6: FutureWarning: Passing bytes to 'read_excel' is deprecated and will be removed in a future version. To read from a byte string, wrap it in a `BytesIO` object.\n",
+      "  df = pd.read_excel(data,\n"
+     ]
+    }
+   ],
    "source": [
     "write_all_csvs(URL_TO_SHEETS_SCHOOL, read_excel_dict_school)"
    ]
@@ -595,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
