--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook preprocesses the current listings of domain and the historical suburban rent dataset.\n",
+    "\n",
+    "By running all the cells in this notebook, any cleaned dataset will be saved in the landing folder."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,11 +30,11 @@
      "output_type": "stream",
      "text": [
       "your 131072x1 screen size is bogus. expect trouble\n",
-      "24/09/20 23:33:09 WARN Utils: Your hostname, DESKTOP-JJQB7CC resolves to a loopback address: 127.0.1.1; using 172.30.3.30 instead (on interface eth0)\n",
-      "24/09/20 23:33:09 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/09/27 11:32:06 WARN Utils: Your hostname, DESKTOP-JJQB7CC resolves to a loopback address: 127.0.1.1; using 172.30.3.30 instead (on interface eth0)\n",
+      "24/09/27 11:32:06 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/20 23:33:10 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/09/27 11:32:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -416,7 +425,7 @@
     "avg_rent_per_suburb = domain_current.groupBy('postcode').avg('rent_pw').orderBy('avg(rent_pw)', ascending=False)\n",
     "# Correct the average rent per week to 2 decimal places\n",
     "avg_rent_per_suburb = avg_rent_per_suburb.withColumn('avg(rent_pw)', avg_rent_per_suburb['avg(rent_pw)'].cast('decimal(7,2)'))\n",
-    "avg_rent_per_suburb.show(10)\n"
+    "avg_rent_per_suburb.show(10)"
    ]
   },
   {
@@ -1623,6 +1632,16 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save it to a csv file\n",
+    "yearly_median.to_csv('../data/landing/yearly_median_rent_by_suburb.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1694,7 +1713,7 @@
        "4                        CBD-St Kilda Rd  2003    -3.125000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,12 +1730,12 @@
     "# Convert the data type of 'year' to integer and 'growth_rate' to float\n",
     "yearly_growth['year'] = yearly_growth['year'].astype('int')\n",
     "yearly_growth['growth_rate'] = yearly_growth['growth_rate'].astype('float')\n",
-    "yearly_growth.head()\n"
+    "yearly_growth.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
