--- a/notebooks/downloading/download juns and housing.ipynb
+++ b/notebooks/downloading/download juns and housing.ipynb
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "5611b9ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_table(string, url, dst_path):\n",
     "    content = requests.get(url).content\n",
-    "    soup = BeautifulSoup(content, 'lxml')\n",
+    "    soup = BeautifulSoup(content, 'html')\n",
     "    \n",
     "    caption_tag = soup.find('caption', string=string)\n",
     "\n",
