--- a/notebooks/preprocess/preprocess juns and housing.ipynb
+++ b/notebooks/preprocess/preprocess juns and housing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "4                  58,036                              41  "
       ]
      },
-     "execution_count": 429,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "4                    58036                               41  "
       ]
      },
-     "execution_count": 430,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "2595"
       ]
      },
-     "execution_count": 431,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "4                  58036.0                             41.0  "
       ]
      },
-     "execution_count": 432,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "5                    14.7  "
       ]
      },
-     "execution_count": 433,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
        "4                     6.4                    18.2  "
       ]
      },
-     "execution_count": 434,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,15 +943,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Economic"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +957,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,11 +967,237 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Economic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As this is annual change, will use december of the previous year to be the inflation change for the future year\n",
+    "- In the end, the metric will track the inflation from the previous year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trimmed mean (%)      float64\n",
+      "year                   object\n",
+      "All groups CPI (%)    float64\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Trimmed mean (%)</th>\n",
+       "      <th>year</th>\n",
+       "      <th>All groups CPI (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.8</td>\n",
+       "      <td>Jun-14</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.4</td>\n",
+       "      <td>Sep-14</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.2</td>\n",
+       "      <td>Dec-14</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Trimmed mean (%)    year  All groups CPI (%)\n",
+       "0               2.8  Jun-14                 3.0\n",
+       "1               2.4  Sep-14                 2.3\n",
+       "2               2.2  Dec-14                 1.7"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# donwload inflation\n",
+    "inflation = pd.read_csv(\"./data/landing/economic/inflation.csv\")\n",
+    "\n",
+    "# rename the columns\n",
+    "NEW_NAMES = {1: \"year\"}\n",
+    "KEEP_COLUMNS = list(range(3))\n",
+    "inflation = rename_dict(inflation, NEW_NAMES, KEEP_COLUMNS)\n",
+    "\n",
+    "print(inflation.dtypes)\n",
+    "inflation.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Trimmed mean (%)</th>\n",
+       "      <th>year</th>\n",
+       "      <th>All groups CPI (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.2</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2.1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1.7</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1.2</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>6.8</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>7.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>4.1</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Trimmed mean (%)  year  All groups CPI (%)\n",
+       "2                2.2  2014                 1.7\n",
+       "6                2.1  2015                 1.7\n",
+       "10               1.5  2016                 1.5\n",
+       "14               1.7  2017                 1.9\n",
+       "18               1.8  2018                 1.8\n",
+       "22               1.5  2019                 1.8\n",
+       "26               1.2  2020                 0.9\n",
+       "30               2.6  2021                 3.5\n",
+       "34               6.8  2022                 7.8\n",
+       "38               4.1  2023                 4.1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter for the december data\n",
+    "inflation = inflation[inflation[\"year\"].str.contains(\"Dec\")]\n",
+    "\n",
+    "# get the year in the right format\n",
+    "inflation[\"year\"] = inflation[\"year\"].apply(lambda x: \"20\" + x[-2:])\n",
+    "\n",
+    "# make sure an integer\n",
+    "inflation[\"year\"] = pd.to_numeric(inflation[\"year\"])\n",
+    "\n",
+    "# Note: increasing the year here to ensure it tracks the change from the previous year\n",
+    "inflation[\"year\"] = inflation[\"year\"] + 1"
+   ]
   },
   {
    "cell_type": "markdown",
