--- a/notebooks/downloading/download juns and housing.ipynb
+++ b/notebooks/downloading/download juns and housing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "672c2592",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "id": "f5a4326a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "id": "1f9abafd",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "id": "16c13462",
    "metadata": {},
    "outputs": [],
@@ -111,11 +111,9 @@
     "        csv_data = io.StringIO(data.decode('ascii', errors=\"replace\"))\n",
     "        df = pd.read_csv(csv_data, index_col=0, header=0, encoding='cp1252')\n",
     "\n",
-    "    print(\"here\")\n",
     "    # skip the final records if necessary\n",
     "    if (read_excel_dict.get(\"skip tail\")):\n",
     "        df = df.iloc[:-read_excel_dict[\"skip tail\"]]\n",
-    "    print(\"finsih\")\n",
     "\n",
     "    # if there are missing columns\n",
     "    if (sheet_dict.get(\"missing header\")):\n",
@@ -130,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "id": "cb498a13",
    "metadata": {},
    "outputs": [],
@@ -142,9 +140,12 @@
     "\n",
     "        # for each sheet, write a csv\n",
     "        for sheet_dict in sheet_dict_list:\n",
+    "            print(f\"writing \\\"{sheet_dict['name']}\\\"\")\n",
+    "\n",
     "            write_csv(data, sheet_dict, read_excel_dict)\n",
-    "        \n",
-    "        time.sleep(SLEEP_TIME)"
+    "\n",
+    "            print(\"success, waiting sever reset\")\n",
+    "            time.sleep(SLEEP_TIME)"
    ]
   },
   {
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "id": "d38e047d",
    "metadata": {},
    "outputs": [],
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "id": "2a0f2f09",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "5611b9ad",
    "metadata": {},
    "outputs": [],
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "id": "19096df1",
    "metadata": {},
    "outputs": [],
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "id": "994fa3f3",
    "metadata": {},
    "outputs": [
@@ -255,18 +256,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "here\n",
-      "finsih\n",
-      "here\n",
-      "finsih\n",
-      "here\n",
-      "finsih\n",
-      "here\n",
-      "finsih\n",
-      "here\n",
-      "finsih\n",
-      "here\n",
-      "finsih\n"
+      "writing \"flat_1_bed_2023\"\n",
+      "success, waiting sever reset\n",
+      "writing \"flat_2_bed_2023\"\n",
+      "success, waiting sever reset\n",
+      "writing \"flat_3_bed_2023\"\n",
+      "success, waiting sever reset\n",
+      "writing \"house_2_bed_2023\"\n",
+      "success, waiting sever reset\n",
+      "writing \"house_3_bed_2023\"\n",
+      "success, waiting sever reset\n",
+      "writing \"house_4_bed_2023\"\n",
+      "success, waiting sever reset\n"
      ]
     }
    ],
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 64,
    "id": "ece53642",
    "metadata": {},
    "outputs": [],
@@ -307,27 +308,28 @@
     "\n",
     "# get all the URLS and sheets to get\n",
     "URL_TO_SHEETS_INTEREST = {\n",
-    "    \"https://www.rba.gov.au/statistics/tables/xls/f06hist.xlsx\": [{\n",
+    "    \"https://www.rba.gov.au/statistics/tables/xls/f05hist.xlsx?v=2024-09-28-19-56-34\": [{\n",
     "        \"sheet\": \"Data\",\n",
-    "        \"name\": \"lending\"\n",
-    "    }],\n",
-    "    \"https://www.rba.gov.au/statistics/tables/xls/f04hist.xlsx\": [{\n",
-    "        \"sheet\": \"Data\",\n",
-    "        \"name\": \"deposit\"\n",
-    "    }],\n",
-    "    \"https://www.rba.gov.au/statistics/tables/xls/f04-1-hist.xlsx\": [{\n",
-    "        \"sheet\": \"Data\",\n",
-    "        \"name\": \"paid_deposit\"\n",
+    "        \"name\": \"lending\"        \n",
     "    }]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 65,
    "id": "f92c0c49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing \"lending\"\n",
+      "success, waiting sever reset\n"
+     ]
+    }
+   ],
    "source": [
     "write_all_csvs(URL_TO_SHEETS_INTEREST, read_excel_dict_interest)"
    ]
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "id": "2d82350a",
    "metadata": {},
    "outputs": [],
@@ -355,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "1e5a76fa",
    "metadata": {},
    "outputs": [],
@@ -373,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 68,
    "id": "3ab20441",
    "metadata": {},
    "outputs": [],
@@ -385,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 69,
    "id": "4d8ecf09",
    "metadata": {},
    "outputs": [],
@@ -630,6 +632,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
