forgot to change (want to rename)

--- a/notebooks/preprocess/preprocess juns and housing.ipynb
+++ b/notebooks/preprocess/preprocess juns and housing.ipynb
@@ -1303,6 +1303,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### GDP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download the lending data\n",
+    "lending = pd.read_csv(\"data/landing/economic/gdp.csv\")\n",
+    "\n",
+    "# rename the columns\n",
+    "NEW_NAMES = {1: \"year\", 4: \"economic: variable interest rate\"}\n",
+    "KEEP_COLUMNS = [1, 4]\n",
+    "lending = rename_dict(lending, NEW_NAMES, KEEP_COLUMNS)\n",
+    "\n",
+    "print(lending.dtypes)\n",
+    "lending.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Housing"
    ]
   },
