--- a/notebooks/downloading/download juns and housing.ipynb
+++ b/notebooks/downloading/download juns and housing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "672c2592",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f5a4326a",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1f9abafd",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "16c13462",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cb498a13",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d38e047d",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "2a0f2f09",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5611b9ad",
    "metadata": {},
    "outputs": [],
@@ -349,24 +349,44 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2d82350a",
+   "id": "1ee24e3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# no #1: Gross domestic product, chain volume measures, seasonally adjusted\n",
-    "GDP_URL = \"https://www.abs.gov.au/statistics/economy/national-accounts/australian-national-accounts-national-income-expenditure-and-product/latest-release\"\n",
-    "GDP_STRING = \"Gross domestic product, chain volume measures, seasonally adjusted\"\n",
-    "DST_PATH = RELATIVE_PATH + \"/economic/gdp.csv\""
+    "# setting up the parameters for the reading data\n",
+    "read_excel_dict_gdp = {\n",
+    "    \"skiprows\": list(range(9)),\n",
+    "    \"index col\": 0,\n",
+    "    \"header rows\": 0,\n",
+    "    \"relative path\": RELATIVE_PATH + \"economic/\"\n",
+    "}\n",
+    "\n",
+    "# get all the URLS and sheets to get\n",
+    "URL_TO_SHEETS_GDP = {\n",
+    "    \"https://www.abs.gov.au/statistics/economy/national-accounts/australian-national-accounts-national-income-expenditure-and-product/jun-2024/5206001_Key_Aggregates.xlsx\": [{\n",
+    "        \"sheet\": \"Data1\",\n",
+    "        \"name\": \"gdp\"        \n",
+    "    }]\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1e5a76fa",
+   "id": "ddb9dcbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing \"gdp\"\n",
+      "success, waiting sever reset\n"
+     ]
+    }
+   ],
    "source": [
-    "write_table(GDP_STRING, GDP_URL, DST_PATH)"
+    "write_all_csvs(URL_TO_SHEETS_GDP, read_excel_dict_gdp)"
    ]
   },
   {
@@ -380,23 +400,44 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3ab20441",
+   "id": "b4f7a156",
    "metadata": {},
    "outputs": [],
    "source": [
-    "INFLATION_URL = \"https://www.abs.gov.au/statistics/economy/price-indexes-and-inflation/consumer-price-index-australia/latest-release\"\n",
-    "INFLATION_STRING = \"All groups CPI and Trimmed mean, Australia, annual movement (%)\"\n",
-    "DST_PATH = RELATIVE_PATH + \"economic/inflation.csv\""
+    "# setting up the parameters for the reading data\n",
+    "read_excel_dict_inflation = {\n",
+    "    \"skiprows\": list(range(1, 10)),\n",
+    "    \"index col\": 0,\n",
+    "    \"header rows\": 0,\n",
+    "    \"relative path\": RELATIVE_PATH + \"economic/\"\n",
+    "}\n",
+    "\n",
+    "# get all the URLS and sheets to get\n",
+    "URL_TO_SHEETS_INFLATION = {\n",
+    "    \"https://www.abs.gov.au/statistics/economy/price-indexes-and-inflation/consumer-price-index-australia/jun-quarter-2024/640106.xlsx\": [{\n",
+    "        \"sheet\": \"Data1\",\n",
+    "        \"name\": \"inflation\"        \n",
+    "    }]\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "4d8ecf09",
+   "execution_count": 18,
+   "id": "b8c6aace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing \"inflation\"\n",
+      "success, waiting sever reset\n"
+     ]
+    }
+   ],
    "source": [
-    "write_table(INFLATION_STRING, INFLATION_URL, DST_PATH)"
+    "write_all_csvs(URL_TO_SHEETS_INFLATION, read_excel_dict_inflation)"
    ]
   },
   {
