--- a/notebooks/downloading/download abs.ipynb
+++ b/notebooks/downloading/download abs.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,14 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading started for 2021\n",
+      "Downloading started for 2021\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Download completed\n",
       "Finishing extracting\n",
       "Downloading started for 2016\n",
@@ -139,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +527,7 @@
     "        \"P_GrpH_Mem_Tot\": \"group household\",\n",
     "        \"P_LonePsn_Tot\": \"lone persons\"\n",
     "    },\n",
-    "    \"add year\": True\n",
+    "    \"add year\": False\n",
     "}"
    ]
   },
@@ -581,7 +587,7 @@
     }
    ],
    "source": [
-    "write_csv(CSV_RELATIONSHIPS_2016)"
+    "#write_csv(CSV_RELATIONSHIPS_2016)"
    ]
   },
   {
