--- a/notebooks/downloading/download juns and housing.ipynb
+++ b/notebooks/downloading/download juns and housing.ipynb
@@ -220,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "19096df1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# setting up the parameters for the reading data\n",
     "read_excel_dict_houses = {\n",
-    "    \"skiprows\": [x for x in range(11) if x != 1],\n",
+    "    \"skiprows\": [0, 2],\n",
     "    \"index col\": 0,\n",
     "    \"header rows\": 0,\n",
     "    \"relative path\": RELATIVE_PATH + \"housing/\"\n",
@@ -235,7 +235,7 @@
     "\n",
     "# get all the URLS and sheets to get\n",
     "URL_TO_SHEETS_HOUSES = {\n",
-    "    \"https://www.dffh.vic.gov.au/moving-annual-rents-suburb-march-quarter-2023-excel\": [\n",
+    "    \"https://www.dffh.vic.gov.au/moving-annual-rent-suburb-june-quarter-2024\": [\n",
     "        {\"sheet\": \"1 bedroom flat\", \"name\": \"flat_1_bed\"},\n",
     "        {\"sheet\": \"2 bedroom flat\", \"name\": \"flat_2_bed\"},\n",
     "        {\"sheet\": \"3 bedroom flat\", \"name\": \"flat_3_bed\"},\n",
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "994fa3f3",
    "metadata": {},
    "outputs": [
@@ -259,19 +259,15 @@
       "writing \"flat_1_bed\"\n",
       "success, waiting sever reset\n",
       "writing \"flat_2_bed\"\n",
+      "success, waiting sever reset\n",
+      "writing \"flat_3_bed\"\n",
+      "success, waiting sever reset\n",
+      "writing \"house_2_bed\"\n",
+      "success, waiting sever reset\n",
+      "writing \"house_3_bed\"\n",
+      "success, waiting sever reset\n",
+      "writing \"house_4_bed\"\n",
       "success, waiting sever reset\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mwrite_all_csvs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mURL_TO_SHEETS_HOUSES\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mread_excel_dict_houses\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36mwrite_all_csvs\u001b[0;34m(url_to_sheets, read_excel_dict)\u001b[0m\n\u001b[1;32m     10\u001b[0m write_csv(data, sheet_dict, read_excel_dict)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msuccess, waiting sever reset\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 13\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mSLEEP_TIME\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -297,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "ece53642",
    "metadata": {},
    "outputs": [],
@@ -704,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
