added processing module and semi cleaned up join and schools dataframes

--- a/notebooks/1. landing/download_data.ipynb
+++ b/notebooks/1. landing/download_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,32 @@
     "        else:\n",
     "            print(f\"Sheet '{sheet_name}' not found in the Excel file.\")\n",
     "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n"
+    "        print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "\n",
+    "def remove_first_n_lines(file_path, n, output_file_path=None):\n",
+    "    \"\"\"\n",
+    "    Removes the first n lines from a file.\n",
+    "\n",
+    "    Args:\n",
+    "    - file_path (str): Path to the input file.\n",
+    "    - n (int): Number of lines to remove.\n",
+    "    - output_file_path (str, optional): Path to save the modified file. \n",
+    "                                        If not provided, it overwrites the original file.\n",
+    "    \"\"\"\n",
+    "    file_path = os.path.join(DOWNLOAD_PATH, file_path)\n",
+    "\n",
+    "    # Read the file and skip the first n lines\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        lines = file.readlines()[n:]\n",
+    "    \n",
+    "    # Determine output path (overwrite or new file)\n",
+    "    if output_file_path is None:\n",
+    "        output_file_path = file_path\n",
+    "    \n",
+    "    # Write the remaining lines back to the file\n",
+    "    with open(output_file_path, 'w') as file:\n",
+    "        file.writelines(lines)\n"
    ]
   },
   {
@@ -122,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +201,8 @@
      "output_type": "stream",
      "text": [
       "File downloaded and saved to school/locations.csv\n",
+      "File downloaded and saved to school/achievement.xlsx\n",
+      "Extracted 'postcomp_for_publication' and saved as CSV to ../../data/1. landing/school/achievement.csv\n",
       "Skipped downloading crime.csv as exists\n",
       "Downloaded and unzipped land_cover\n"
      ]
@@ -185,6 +212,13 @@
     "# Download school locations\n",
     "school_locations = 'https://www.education.vic.gov.au/Documents/about/research/datavic/dv331_schoollocations2022.csv'\n",
     "download(school_locations, 'school/locations.csv')\n",
+    "\n",
+    "# Download school pathways\n",
+    "school_achievment_url = 'https://www.vcaa.vic.edu.au/Documents/statistics/2023/2023SeniorSecondaryCompletionAndAchievementInformation.xlsx'\n",
+    "download(school_achievment_url, 'school/achievement.xlsx')\n",
+    "excel_to_csv('school/achievement.xlsx', 'postcomp_for_publication', 'school/achievement.csv')\n",
+    "os.remove(os.path.join(DOWNLOAD_PATH, 'school/achievement.xlsx'))\n",
+    "remove_first_n_lines('school/achievement.csv', 10)\n",
     "\n",
     "# Download crime data\n",
     "crime_excel_file = 'crime.xlsx'\n",
@@ -201,20 +235,6 @@
     "land_cover_url = 'https://cl-isd-prd-datashare-s3-delivery.s3.amazonaws.com/PrePackages/VIC_LANDCOVER_TS.zip'\n",
     "download_shapefile(land_cover_url, 'land_cover')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Download land cover"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
