--- a/notebooks/2. raw/1. rename external and housing.ipynb
+++ b/notebooks/2. raw/1. rename external and housing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "b41d1857",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "RELATIVE_PATH_OUT = \"../../data/2. raw/1. renamed/\"\n",
     "\n",
     "# get the directory names\n",
-    "directory_names = [\"housing\", \"population\", \"economic\", \"economic_by_region\", \"school\"]\n",
+    "directory_names = [\"\", \"housing\", \"population\", \"economic\", \"economic_by_region\", \"school\"]\n",
     "\n",
     "# create each new directory\n",
     "for directory_name in directory_names:\n",
