--- a/notebooks/2. raw/2. merge external and housing.ipynb
+++ b/notebooks/2. raw/2. merge external and housing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "4        1  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1520,256 @@
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>suburbs</th>\n",
+       "      <th>year</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>economic: median income</th>\n",
+       "      <th>economic: median age of earners</th>\n",
+       "      <th>economic: top 1% suburb</th>\n",
+       "      <th>economic: top 5% suburb</th>\n",
+       "      <th>economic: gini coefficient</th>\n",
+       "      <th>economic: variable interest rate</th>\n",
+       "      <th>economic: gdp quarterly</th>\n",
+       "      <th>...</th>\n",
+       "      <th>relationships: lone persons</th>\n",
+       "      <th>relationships: married</th>\n",
+       "      <th>relationships: other related individual</th>\n",
+       "      <th>relationships: child under 15</th>\n",
+       "      <th>relationships: lone parents</th>\n",
+       "      <th>relationships: dependent student</th>\n",
+       "      <th>relationships: defacto</th>\n",
+       "      <th>relationships: non dependent child</th>\n",
+       "      <th>relationships: group household</th>\n",
+       "      <th>economic: number of earners</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Albert Park-Middle Park-West St Kilda</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>30.75</td>\n",
+       "      <td>0.5565</td>\n",
+       "      <td>6.820000</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6156.0</td>\n",
+       "      <td>7732.0</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>2914.0</td>\n",
+       "      <td>761.0</td>\n",
+       "      <td>994.0</td>\n",
+       "      <td>4336.0</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>1798.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albert Park-Middle Park-West St Kilda</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>30.75</td>\n",
+       "      <td>0.5565</td>\n",
+       "      <td>6.736667</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6156.0</td>\n",
+       "      <td>7732.0</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>2914.0</td>\n",
+       "      <td>761.0</td>\n",
+       "      <td>994.0</td>\n",
+       "      <td>4336.0</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>1798.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albert Park-Middle Park-West St Kilda</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>30.75</td>\n",
+       "      <td>0.5565</td>\n",
+       "      <td>6.236667</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6156.0</td>\n",
+       "      <td>7732.0</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>2914.0</td>\n",
+       "      <td>761.0</td>\n",
+       "      <td>994.0</td>\n",
+       "      <td>4336.0</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>1798.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albert Park-Middle Park-West St Kilda</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>30.75</td>\n",
+       "      <td>0.5565</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6156.0</td>\n",
+       "      <td>7732.0</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>2914.0</td>\n",
+       "      <td>761.0</td>\n",
+       "      <td>994.0</td>\n",
+       "      <td>4336.0</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>1798.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Albert Park-Middle Park-West St Kilda</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>30.75</td>\n",
+       "      <td>0.5565</td>\n",
+       "      <td>6.320000</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6156.0</td>\n",
+       "      <td>7732.0</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>2914.0</td>\n",
+       "      <td>761.0</td>\n",
+       "      <td>994.0</td>\n",
+       "      <td>4336.0</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>1798.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 108 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 suburbs    year  quarter  \\\n",
+       "0  Albert Park-Middle Park-West St Kilda  2001.0      1.0   \n",
+       "1  Albert Park-Middle Park-West St Kilda  2001.0      2.0   \n",
+       "2  Albert Park-Middle Park-West St Kilda  2001.0      3.0   \n",
+       "3  Albert Park-Middle Park-West St Kilda  2001.0      4.0   \n",
+       "4  Albert Park-Middle Park-West St Kilda  2002.0      1.0   \n",
+       "\n",
+       "   economic: median income  economic: median age of earners  \\\n",
+       "0                      NaN                              NaN   \n",
+       "1                      NaN                              NaN   \n",
+       "2                      NaN                              NaN   \n",
+       "3                      NaN                              NaN   \n",
+       "4                      NaN                              NaN   \n",
+       "\n",
+       "   economic: top 1% suburb  economic: top 5% suburb  \\\n",
+       "0                    14.55                    30.75   \n",
+       "1                    14.55                    30.75   \n",
+       "2                    14.55                    30.75   \n",
+       "3                    14.55                    30.75   \n",
+       "4                    14.55                    30.75   \n",
+       "\n",
+       "   economic: gini coefficient  economic: variable interest rate  \\\n",
+       "0                      0.5565                          6.820000   \n",
+       "1                      0.5565                          6.736667   \n",
+       "2                      0.5565                          6.236667   \n",
+       "3                      0.5565                               NaN   \n",
+       "4                      0.5565                          6.320000   \n",
+       "\n",
+       "   economic: gdp quarterly  ...  relationships: lone persons  \\\n",
+       "0                      0.9  ...                       6156.0   \n",
+       "1                      1.2  ...                       6156.0   \n",
+       "2                      1.2  ...                       6156.0   \n",
+       "3                      NaN  ...                       6156.0   \n",
+       "4                      1.7  ...                       6156.0   \n",
+       "\n",
+       "   relationships: married  relationships: other related individual  \\\n",
+       "0                  7732.0                                    426.0   \n",
+       "1                  7732.0                                    426.0   \n",
+       "2                  7732.0                                    426.0   \n",
+       "3                  7732.0                                    426.0   \n",
+       "4                  7732.0                                    426.0   \n",
+       "\n",
+       "   relationships: child under 15  relationships: lone parents  \\\n",
+       "0                         2914.0                        761.0   \n",
+       "1                         2914.0                        761.0   \n",
+       "2                         2914.0                        761.0   \n",
+       "3                         2914.0                        761.0   \n",
+       "4                         2914.0                        761.0   \n",
+       "\n",
+       "   relationships: dependent student  relationships: defacto  \\\n",
+       "0                             994.0                  4336.0   \n",
+       "1                             994.0                  4336.0   \n",
+       "2                             994.0                  4336.0   \n",
+       "3                             994.0                  4336.0   \n",
+       "4                             994.0                  4336.0   \n",
+       "\n",
+       "   relationships: non dependent child  relationships: group household  \\\n",
+       "0                               654.0                          1798.0   \n",
+       "1                               654.0                          1798.0   \n",
+       "2                               654.0                          1798.0   \n",
+       "3                               654.0                          1798.0   \n",
+       "4                               654.0                          1798.0   \n",
+       "\n",
+       "   economic: number of earners  \n",
+       "0                          0.0  \n",
+       "1                          0.0  \n",
+       "2                          0.0  \n",
+       "3                          0.0  \n",
+       "4                          0.0  \n",
+       "\n",
+       "[5 rows x 108 columns]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This section is just to make the aggregation a bit easier\n",
     "# is in the form { 'col_name': 'func', 'col2': 'func' }\n",
@@ -1561,13 +1810,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df_external_housing = pd.merge(merged_df_suburbs, housing_df, on=[\"suburbs\", \"year\", \"quarter\"], how=\"outer\")\n",
     "merged_df_external_housing.to_csv(MERGED_EXTERNAL_HOUSING_PATH_OUT)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
