added sa2-join, schools preprocess and schools aggregate notebooks

--- a/notebooks/1. landing/download_data.ipynb
+++ b/notebooks/1. landing/download_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +156,7 @@
      "text": [
       "Downloaded and unzipped sa2\n",
       "Downloaded and unzipped postal\n",
+      "Downloaded and unzipped school/zones\n",
       "Downloaded and unzipped regional_station\n",
       "Downloaded and unzipped metro_station\n"
      ]
@@ -171,7 +172,8 @@
     "download_shapefile(sa2_url, 'postal')\n",
     "\n",
     "# Download school zone shapefile\n",
-    "\n",
+    "school_zone_url = \"https://www.education.vic.gov.au/Documents/about/research/datavic/dv311-schoolzones2022.zip\"\n",
+    "download_shapefile(school_zone_url, 'school_zones')\n",
     "\n",
     "# Download PTV stations\n",
     "ptv_regional_stations = \"https://s3.ap-southeast-2.amazonaws.com/cl-isd-prd-datashare-s3-delivery/Order_23MSYP.zip?orderid=T81MBG\"\n",
