added preprocess crime

--- a/notebooks/1. landing/download_data.ipynb
+++ b/notebooks/1. landing/download_data.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
      "text": [
       "Downloaded and unzipped sa2\n",
       "Downloaded and unzipped postal\n",
-      "Downloaded and unzipped school/zones\n",
+      "Downloaded and unzipped school_zones\n",
       "Downloaded and unzipped regional_station\n",
       "Downloaded and unzipped metro_station\n"
      ]
@@ -169,7 +169,7 @@
     "\n",
     "# Download postal regions\n",
     "postal_url = \"https://www.abs.gov.au/statistics/standards/australian-statistical-geography-standard-asgs-edition-3/jul2021-jun2026/access-and-downloads/digital-boundary-files/POA_2021_AUST_GDA2020_SHP.zip\"\n",
-    "download_shapefile(sa2_url, 'postal')\n",
+    "download_shapefile(postal_url, 'postal')\n",
     "\n",
     "# Download school zone shapefile\n",
     "school_zone_url = \"https://www.education.vic.gov.au/Documents/about/research/datavic/dv311-schoolzones2022.zip\"\n",
